# sandhi

./: .gitignore  README.md  package.json  vite.config.ts
backend/: .gitignore  audio_utils.py  download_model.py  inference.py  main.py  requirements.txt
backend/app/: main.py
backend/app/models/: audio.py
backend/app/routes/: audio.py
backend/app/services/: inference.py
backend/app/utils/: audio.py
deployment/: Dockerfile  start.sh
model/: .gitignore  data-pre-processing.py  device_test.py  model-building.ipynb  pyproject.toml
src/: App.tsx  index.css
src/components/: .gitkeep  AudioUploader.jsx  CTA.jsx  FeatureCard.jsx  Header.jsx  Hero.jsx  HowItWorks.jsx  ModelSpecs.jsx  PacketLossControl.jsx  PacketLossSlider.jsx  PipelineVisualizer.jsx  Problem.jsx  Solution.jsx  UploadPanel.jsx  WaveformPanel.jsx
src/pages/: Architecture.jsx  Demo.jsx  Home.jsx
src/services/: api.ts
