[project]
name = "model"
version = "0.1.0"
description = "GAN for speech synthesis"
readme = "README.md"
requires-python = "==3.10.20"
dependencies = [
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "soundfile>=0.13.1",
    "torch==2.8.0+xpu",
    "torchaudio==2.8.0+xpu",
    "torchvision==0.23.0+xpu",
    "intel-extension-for-pytorch==2.8.10+xpu",
    "pytorch-triton-xpu==3.4.0",
    "tqdm>=4.66.0",
    "ipywidgets>=8.1.0",
    "matplotlib>=3.8.0"
]

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[[tool.uv.index]]
name = "intel-ipex"
url = "https://pytorch-extension.intel.com/release-whl/stable/xpu/us/"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-xpu" }
torchvision = { index = "pytorch-xpu" }
torchaudio = { index = "pytorch-xpu" }
pytorch-triton-xpu = { index = "pytorch-xpu" }
intel-extension-for-pytorch = { index = "intel-ipex" }